# uai_secureshare_backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20241216104626_tables.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  router.rs
src/handler/: auth.rs  mod.rs
src/utils/: keys.rs  password.rs  token.rs
